build_output.log
   Compiling neural-doc-flow-core v0.1.0 (/workspaces/doc-ingest/neural-doc-flow-core)
error: prefix `Architecture` is unknown
   --> neural-doc-flow-core/src/engine.rs:576:75
    |
576 |         info!("Initializing Phase 4 Document Engine with Complete 4-Layer Architecture");
    |                                                                           ^^^^^^^^^^^^ unknown prefix
    |
    = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
    |
576 |         info!("Initializing Phase 4 Document Engine with Complete 4-Layer Architecture ");
    |                                                                                       +

error: prefix `schemas` is unknown
   --> neural-doc-flow-core/src/engine.rs:611:69
    |
611 |         info!("Initializing DocumentEngine with default plugins and schemas");
    |                                                                     ^^^^^^^ unknown prefix
    |
    = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
    |
611 |         info!("Initializing DocumentEngine with default plugins and schemas ");
    |                                                                            +

error: prefix `engine` is unknown
   --> neural-doc-flow-core/src/engine.rs:808:47
    |
808 |         info!("Security processor attached to engine");
    |                                               ^^^^^^ unknown prefix
    |
    = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
    |
808 |         info!("Security processor attached to engine ");
    |                                                     +

error: prefix `disabled` is unknown
   --> neural-doc-flow-core/src/engine.rs:922:46
    |
922 |                     info!("Security scanning disabled");
    |                                              ^^^^^^^^ unknown prefix
    |
    = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
    |
922 |                     info!("Security scanning disabled ");
    |                                                      +

error: prefix `error` is unknown
   --> neural-doc-flow-core/src/engine.rs:940:76
    |
940 | ...                   warn!("Proceeding without security scan due to error");
    |                                                                      ^^^^^ unknown prefix
    |
    = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
    |
940 |                             warn!("Proceeding without security scan due to error ");
    |                                                                                 +

error: prefix `implemented` is unknown
   --> neural-doc-flow-core/src/engine.rs:946:62
    |
946 |                     warn!("Custom security scan mode not yet implemented");
    |                                                              ^^^^^^^^^^^ unknown prefix
    |
    = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
    |
946 |                     warn!("Custom security scan mode not yet implemented ");
    |                                                                         +

error: prefix `only` is unknown
   --> neural-doc-flow-core/src/engine.rs:951:94
    |
951 |             info!("Security enabled but no processor available - performing basic validation only");
    |                                                                                              ^^^^ unknown prefix
    |
    = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
    |
951 |             info!("Security enabled but no processor available - performing basic validation only ");
    |                                                                                                  +

error: prefix `processing` is unknown
    --> neural-doc-flow-core/src/engine.rs:1062:71
     |
1062 |                     info!("Security analysis: ALLOW - proceeding with processing");
     |                                                                       ^^^^^^^^^^ unknown prefix
     |
     = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
     |
1062 |                     info!("Security analysis: ALLOW - proceeding with processing ");
     |                                                                                 +

error: prefix `content` is unknown
    --> neural-doc-flow-core/src/engine.rs:1065:76
     |
1065 |                     info!("Security analysis: SANITIZE - cleaning document content");
     |                                                                            ^^^^^^^ unknown prefix
     |
     = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
     |
1065 |                     info!("Security analysis: SANITIZE - cleaning document content ");
     |                                                                                   +

error: prefix `review` is unknown
    --> neural-doc-flow-core/src/engine.rs:1069:81
     |
1069 |                     warn!("Security analysis: QUARANTINE - document flagged for review");
     |                                                                                 ^^^^^^ unknown prefix
     |
     = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
     |
1069 |                     warn!("Security analysis: QUARANTINE - document flagged for review ");
     |                                                                                       +

error: prefix `level` is unknown
    --> neural-doc-flow-core/src/engine.rs:1077:56
     |
1077 |                         serde_json::json!("High threat level")
     |                                                        ^^^^^ unknown prefix
     |
     = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
     |
1077 |                         serde_json::json!("High threat level ")
     |                                                             +

error: prefix `taken` is unknown
    --> neural-doc-flow-core/src/engine.rs:1081:61
     |
1081 |                     error!("Security analysis: BLOCK action taken");
     |                                                             ^^^^^ unknown prefix
     |
     = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
     |
1081 |                     error!("Security analysis: BLOCK action taken ");
     |                                                                  +

error[E0765]: unterminated double quote string
    --> neural-doc-flow-core/src/engine.rs:1081:66
     |
1081 |                       error!("Security analysis: BLOCK action taken");
     |  __________________________________________________________________^
1082 | |                     // Work around Rust 1.88.0 parser bug with string literals
1083 | |                     let msg = ['S', 'e', 'c', 'u', 'r', 'i', 't', 'y', ' ', 'b', 'l', 'o', 'c', 'k', 'e', 'd']
1084 | |                         .iter()
...    |
1184 | | }
     | |_^

For more information about this error, try `rustc --explain E0765`.
error: could not compile `neural-doc-flow-core` (lib) due to 13 previous errors
